--- a/index.html
+++ b/index.html
@@ -229,6 +229,7 @@
   <template id="messages">
     <div class="img-upload__message  img-upload__message--loading">Загружаем...</div>
   </template>
+  <script src="https://lodash.com/docs/4.17.15#random"></script>
 <script src="js/main.js"></script>
 </body>
 </html>
